--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="nameHint">Имя</string>
     <string name="stateHint">Статус</string>
     <string name="ageHint">Возраст</string>
-    <string name="app_name">Andrei</string>
+    <string name="app_name">Uchkin</string>
 </resources>
